--- a/_config.yml
+++ b/_config.yml
@@ -6,28 +6,28 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 徐代龙的技术专栏
-brief-intro: Android and Python Coder
+title: Wisematch's Blog
+brief-intro: 科研，工程，生活
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://643435675.github.io" # the base hostname & protocol for your site
+url: "https://wisematch.github.io" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
 # other links
-twitter_username: #gaohaoyang126
-facebook_username: #gaohaoyang.water
-github_username:  643435675
-email: 643435675@QQ.com
-weibo_username: 3115521wh
-zhihu_username: hll643435675
-linkedIn_username: gaohaoyang
-dribbble_username:
+twitter_username: # none
+facebook_username: # none
+github_username:  wisematch
+email: wisematchcripac@gmail.com
+weibo_username: # none
+zhihu_username: # none
+linkedIn_username: # none
+dribbble_username: #none
 
-description_footer: 来自徐代龙的个人专栏！
+description_footer: By Wisematch
 
 # comments
 # two ways to comment, only choose one, and use your own short name
-# 两种评论插件，选一个就好了，使用自己的 short_name
+
 duoshuo_shortname: #hygblog
 disqus_shortname: #gaohaoyang
 
